# cmake_proto

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
